--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,7 @@
 
 #main {
     margin-top: 100px;
-    margin-bottom: 100px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    background-color: #fefae0;
+    border-radius: 30px;
 }
