--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container card" id="main">
     <div class="row">
         <div class="col-12 text-center" id="date">
-            <h1>Martes, 6 de Abril de 2021</h1>
+            <h1>{{fechaActual}}</h1>
         </div>
     </div>
     <app-horario></app-horario>
