falta agregar campo para ingresar la hora de la atención

--- a/src/app/components/horario/horario.component.html
+++ b/src/app/components/horario/horario.component.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="col-8 datos">
                     <h3>Disponible</h3>
-                    <button class="btn btn-primary">Agendar</button>
+                    <button class="btn btn-primary" (click)="nuevoHorario()">Agendar</button>
                 </div>
             </div>
         </div>
@@ -18,7 +18,7 @@
                 </div>
                 <div class="col-8 datos">
                     <h3>Disponible</h3>
-                    <button class="btn btn-primary">Agendar</button>
+                    <button class="btn btn-primary" (click)="nuevoHorario()">Agendar</button>
                 </div>
             </div>
         </div>
