--- a/src/app/components/agenda/horario/horario.component.html
+++ b/src/app/components/agenda/horario/horario.component.html
@@ -1,9 +1,19 @@
 <div class="container">
     <div class="row">
-        <div class="col-6">
-            <div class="row horario" *ngFor="let horario of hoursInTheMorning">
+        <div class="col-12 horario">
+            <div class="row">
                 <div class="col-4 text-center hora">
-                    <h3>{{horario}} hrs.</h3>
+                    <h3> Hora de la atención </h3>
+                </div>
+                <div class="col-8 datos">
+                    <h3> Agregar datos de la hora de atención </h3>
+                    <button class="btn btn-primary" (click)="nuevoHorario()">Agendar</button>
+                </div>
+            </div>
+
+            <!-- <div class="row horario" *ngFor="let horario of hoursInTheMorning">
+                <div class="col-4 text-center hora">
+                    <h3> {{horario}} hrs.</h3>
                 </div>
                 <div class="col-8 datos">
                     <h3>Disponible</h3>
@@ -20,7 +30,7 @@
                     <h3>Disponible</h3>
                     <button class="btn btn-primary" (click)="nuevoHorario()">Agendar</button>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
