--- a/src/app/components/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.html
+++ b/src/app/components/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.html
@@ -62,10 +62,8 @@
           <!-- Número de consulta a la que asiste el paciente -->
           <div class="col-2">
             <label for="nroConsulta" class="form-label">N° consulta</label>
-            <input formControlName="nroConsulta" type="number" class="form-control"
-              id="nroConsulta" name="nroConsulta">
-            <div *ngIf="nroConsulta?.invalid && nroConsulta?.touched"
-              class="alert alert-danger col-12">
+            <input formControlName="nroConsulta" type="number" class="form-control" id="nroConsulta" name="nroConsulta">
+            <div *ngIf="nroConsulta?.invalid && nroConsulta?.touched" class="alert alert-danger col-12">
               Debes ingresar un N° válido!
             </div>
           </div>
@@ -73,10 +71,9 @@
           <!-- Fecha de la atención -->
           <div class="col-5">
             <label for="fechaAtencion" class="form-label">Fecha de la atención</label>
-            <input formControlName="fechaAtencion" type="date" class="form-control"
-              id="fechaAtencion" name="fechaAtencion">
-            <div *ngIf="fechaAtencion?.invalid && fechaAtencion?.touched"
-              class="alert alert-danger col-12">
+            <input formControlName="fechaAtencion" type="date" class="form-control" id="fechaAtencion"
+              name="fechaAtencion">
+            <div *ngIf="fechaAtencion?.invalid && fechaAtencion?.touched" class="alert alert-danger col-12">
               Debes ingresar la fecha de la atención!
             </div>
           </div>
@@ -84,17 +81,15 @@
           <!-- Hora de la atención -->
           <div class="col-5">
             <label for="horaAtencion" class="form-label">Hora de la atención</label>
-            <input formControlName="horaAtencion" type="time" class="form-control"
-              id="horaAtencion" name="horaAtencion">
-            <div *ngIf="horaAtencion?.invalid && horaAtencion?.touched"
-              class="alert alert-danger col-12">
+            <input formControlName="horaAtencion" type="time" class="form-control" id="horaAtencion"
+              name="horaAtencion">
+            <div *ngIf="horaAtencion?.invalid && horaAtencion?.touched" class="alert alert-danger col-12">
               Debes ingresar la hora de la atención!
             </div>
           </div>
         </div>
 
-        <button [disabled]="nuevoHorarioForm.invalid" (click)="guardarNuevoHorario()" type="submit"
-          class="btn btn-primary">Guardar horario</button>
+        <button [disabled]="nuevoHorarioForm.invalid" type="submit" class="btn btn-primary">Guardar horario</button>
 
       </form>
     </div>
