se obtienen y despliegan horarios por fecha de forma correcta

--- a/src/app/components/agenda/agenda.component.html
+++ b/src/app/components/agenda/agenda.component.html
@@ -1,8 +1,15 @@
 <div class="container card" id="main">
     <div class="row">
-        <div class="col-12 text-center" id="date">
+        <div class="col-6 text-center" id="date">
             <h1>{{fechaActual}}</h1>
         </div>
     </div>
-    <app-horario></app-horario>
+    <div class="row">
+        <div class="col-6">
+            <app-horario></app-horario>
+        </div>
+        <div class="col-6">
+            <!-- AQUÍ FALTA AGREGAR HORARIOS DISPONIBLES CON HORA PRE ESTABLECIDA -->
+        </div>
+    </div>
 </div>
