--- a/src/app/components/hora-atencion/agenda/horario/horario.component.css
+++ b/src/app/components/hora-atencion/agenda/horario/horario.component.css
@@ -1,9 +1,18 @@
+.bi-clock {
+    font-size: 50px;
+}
+
+.bi-calendar-check {
+    font-size: 20px;
+    margin-right: 15px;
+}
+
 .datos, .hora {
-    padding: 40px;
+    padding: 38px;
 }
 
 .hora {
-    background-color: #606c38;
+    background-color: #284b63;
     border-radius: 15px;
     color: white;
 }
@@ -12,4 +21,11 @@
     margin-top: 50px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     border-radius: 15px;
+}
+
+button {
+    background-color: #284b63;
+    border-color: #284b63;
+    font-size: 18px;
+    margin-top: 15px;
 }
