--- a/src/app/components/hora-atencion/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.css
+++ b/src/app/components/hora-atencion/agenda/horario/nuevo-horario-form/nuevo-horario-form.component.css
@@ -1,4 +1,41 @@
-.container {
-    background-color: #fefae0;
-    padding: 50px 20px;
+#title {
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+    border-bottom: 5px solid #284b63;
 }
+
+.container {
+    margin-top: 40px;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 50px 100px;
+}
+
+.form-control, .input-group {
+    padding-bottom: 10px;
+    margin-bottom: 5px;
+    position: relative;
+}
+
+.input {
+    padding-left: 130px;
+}
+
+button, button:disabled {
+    margin-left: 400px;
+    background-color: #284b63;
+    border-color: #284b63;
+}
+
+i {
+    background-color: #284b63;
+    color: #fff;
+}
+
+span {
+    margin-bottom: 5px;
+    background-color: #284b63;
+    color: #fff;
+}
+
