mejora aspecto de la agenda

--- a/src/app/components/hora-atencion/agenda/agenda.component.css
+++ b/src/app/components/hora-atencion/agenda/agenda.component.css
@@ -1,23 +1,55 @@
+#button-div {
+    padding-top: 30px;
+}
+
 #main {
-    margin-top: 100px;
+    margin-top: 40px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     background-color: #fff;
     border-radius: 15px;
+    padding-top: 20px;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-bottom: 80px;
+}
+
+#search-date-input {
+    margin-top: 7px;
 }
 
 #subtitles {
     padding-bottom: 20px;
     border-bottom: 5px solid #284b63;
 }
-.date {
-    margin-top: 40px;
+
+#title {
+    padding-bottom: 25px;
+    margin-bottom: 10px;
+    border-bottom: 5px solid #284b63;
 }
 
-button {
-    border-radius: 100%;
-    margin: 0 20px;
+.date {
+    margin-top: 30px;
+}
+
+.form { 
+    margin-right: 0%;
+}
+
+button, button:disabled, button:focus {
     background-color: #284b63;
     border-color: #284b63;
+}
+
+button:hover {
+    background-color: #d9d9d9;
+    border-color: #d9d9d9;
+    color: #353535;
+}
+
+i, span {
+    background-color: #284b63;
+    color: #fff;
 }
 
 
