--- a/src/app/components/hora-atencion/agenda/horario/horario.component.css
+++ b/src/app/components/hora-atencion/agenda/horario/horario.component.css
@@ -7,18 +7,19 @@
     margin-right: 15px;
 }
 
-.datos, .hora {
-    padding: 38px;
+.datos {
+    padding-top: 30px;
 }
 
 .hora {
     background-color: #284b63;
     border-radius: 15px;
     color: white;
+    padding: 10px;
 }
 
 .horario {
-    margin-top: 50px;
+    margin-top: 30px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     border-radius: 15px;
 }
@@ -27,5 +28,11 @@ button {
     background-color: #284b63;
     border-color: #284b63;
     font-size: 18px;
-    margin-top: 15px;
+    margin-top: 10px;
+}
+
+button:hover {
+    background-color: #d9d9d9;
+    border-color: #d9d9d9;
+    color: #353535;
 }
