inicia formulario para modificar paciente

--- a/src/app/components/hora-atencion/agenda/horario/horario.component.html
+++ b/src/app/components/hora-atencion/agenda/horario/horario.component.html
@@ -23,7 +23,7 @@
                     <div class="col-lg-8 datos text-center">
                         <h3>Horario disponible</h3>
                         <button class="btn btn-primary"
-                        [routerLink]="['/nuevo-horario']"><i class="bi bi-calendar-check"></i>Agendar</button>
+                        [routerLink]="['/nuevo-horario']"><i class="bi bi-calendar-check"></i>Agendar este horario</button>
                     </div>
                   </ng-template>
             </div>
