--- a/src/app/components/hora-atencion/agenda/agenda.component.html
+++ b/src/app/components/hora-atencion/agenda/agenda.component.html
@@ -37,7 +37,7 @@
             <h3>Sobrecupos</h3>
         </div>
         <div class="col-lg-3" id="button-div">
-            <button class="btn btn-primary" [routerLink]="['/nuevo-horario']">Agendar un sobrecupo</button>
+            <button class="btn btn-primary" [routerLink]="['/nuevo-horario']">Agendar horario</button>
         </div>
     </div>
     <div class="row">
